syntax = "proto3";

package admin.v1;

option go_package = "github.com/ictsc/ictsc-regalia/backend/pkg/proto/admin/v1;adminv1";

message Rule {
  string markdown = 2;
}

message GetRuleRequest {}

message GetRuleResponse {
  Rule rule = 1;
}

message UpdateRuleRequest {
  Rule rule = 1;
}
message UpdateRuleResponse {}

service RuleService {
  rpc GetRule(GetRuleRequest) returns (GetRuleResponse);
  rpc UpdateRule(UpdateRuleRequest) returns (UpdateRuleResponse);
}
